syntax/generated/MongodbCmdParser.cpp

// Generated from MongodbCmdParser.g4 by ANTLR 4.7.1


#include "MongodbCmdParserListener.h"
#include "MongodbCmdParserVisitor.h"

#include "MongodbCmdParser.h"


using namespace antlrcpp;
using namespace mongodbcmd;
using namespace antlr4;

MongodbCmdParser::MongodbCmdParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MongodbCmdParser::~MongodbCmdParser() {
  delete _interpreter;
}

std::string MongodbCmdParser::getGrammarFileName() const {
  return "MongodbCmdParser.g4";
}

const std::vector<std::string>& MongodbCmdParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MongodbCmdParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StmtContext ------------------------------------------------------------------

MongodbCmdParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MongodbCmdParser::Db_nameContext* MongodbCmdParser::StmtContext::db_name() {
  return getRuleContext<MongodbCmdParser::Db_nameContext>(0);
}

std::vector<tree::TerminalNode *> MongodbCmdParser::StmtContext::DOT() {
  return getTokens(MongodbCmdParser::DOT);
}

tree::TerminalNode* MongodbCmdParser::StmtContext::DOT(size_t i) {
  return getToken(MongodbCmdParser::DOT, i);
}

MongodbCmdParser::Command_functionContext* MongodbCmdParser::StmtContext::command_function() {
  return getRuleContext<MongodbCmdParser::Command_functionContext>(0);
}

tree::TerminalNode* MongodbCmdParser::StmtContext::LPAREN() {
  return getToken(MongodbCmdParser::LPAREN, 0);
}

MongodbCmdParser::ArgumentsContext* MongodbCmdParser::StmtContext::arguments() {
  return getRuleContext<MongodbCmdParser::ArgumentsContext>(0);
}

tree::TerminalNode* MongodbCmdParser::StmtContext::RPAREN() {
  return getToken(MongodbCmdParser::RPAREN, 0);
}

std::vector<MongodbCmdParser::Function_callContext *> MongodbCmdParser::StmtContext::function_call() {
  return getRuleContexts<MongodbCmdParser::Function_callContext>();
}

MongodbCmdParser::Function_callContext* MongodbCmdParser::StmtContext::function_call(size_t i) {
  return getRuleContext<MongodbCmdParser::Function_callContext>(i);
}

MongodbCmdParser::Use_stmtContext* MongodbCmdParser::StmtContext::use_stmt() {
  return getRuleContext<MongodbCmdParser::Use_stmtContext>(0);
}


size_t MongodbCmdParser::StmtContext::getRuleIndex() const {
  return MongodbCmdParser::RuleStmt;
}

void MongodbCmdParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void MongodbCmdParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any MongodbCmdParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::StmtContext* MongodbCmdParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 0, MongodbCmdParser::RuleStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(48);
      db_name();
      setState(53);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(49);
          match(MongodbCmdParser::DOT);
          setState(50);
          function_call(); 
        }
        setState(55);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
      }
      setState(56);
      match(MongodbCmdParser::DOT);
      setState(57);
      command_function();
      setState(58);
      match(MongodbCmdParser::LPAREN);
      setState(59);
      arguments();
      setState(60);
      match(MongodbCmdParser::RPAREN);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(62);
      db_name();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MongodbCmdParser::DOT) {
        setState(63);
        match(MongodbCmdParser::DOT);
        setState(64);
        function_call();
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      use_stmt();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Command_functionContext ------------------------------------------------------------------

MongodbCmdParser::Command_functionContext::Command_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::Command_functionContext::RUNCOMMAND() {
  return getToken(MongodbCmdParser::RUNCOMMAND, 0);
}

tree::TerminalNode* MongodbCmdParser::Command_functionContext::ADMINCOMMAND() {
  return getToken(MongodbCmdParser::ADMINCOMMAND, 0);
}


size_t MongodbCmdParser::Command_functionContext::getRuleIndex() const {
  return MongodbCmdParser::RuleCommand_function;
}

void MongodbCmdParser::Command_functionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand_function(this);
}

void MongodbCmdParser::Command_functionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand_function(this);
}


antlrcpp::Any MongodbCmdParser::Command_functionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitCommand_function(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::Command_functionContext* MongodbCmdParser::command_function() {
  Command_functionContext *_localctx = _tracker.createInstance<Command_functionContext>(_ctx, getState());
  enterRule(_localctx, 2, MongodbCmdParser::RuleCommand_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _la = _input->LA(1);
    if (!(_la == MongodbCmdParser::RUNCOMMAND

    || _la == MongodbCmdParser::ADMINCOMMAND)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Use_stmtContext ------------------------------------------------------------------

MongodbCmdParser::Use_stmtContext::Use_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::Use_stmtContext::M_USE() {
  return getToken(MongodbCmdParser::M_USE, 0);
}

MongodbCmdParser::Db_nameContext* MongodbCmdParser::Use_stmtContext::db_name() {
  return getRuleContext<MongodbCmdParser::Db_nameContext>(0);
}


size_t MongodbCmdParser::Use_stmtContext::getRuleIndex() const {
  return MongodbCmdParser::RuleUse_stmt;
}

void MongodbCmdParser::Use_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUse_stmt(this);
}

void MongodbCmdParser::Use_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUse_stmt(this);
}


antlrcpp::Any MongodbCmdParser::Use_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitUse_stmt(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::Use_stmtContext* MongodbCmdParser::use_stmt() {
  Use_stmtContext *_localctx = _tracker.createInstance<Use_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, MongodbCmdParser::RuleUse_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(MongodbCmdParser::M_USE);
    setState(76);
    db_name();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Db_nameContext ------------------------------------------------------------------

MongodbCmdParser::Db_nameContext::Db_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::Db_nameContext::IDENTIFIER() {
  return getToken(MongodbCmdParser::IDENTIFIER, 0);
}


size_t MongodbCmdParser::Db_nameContext::getRuleIndex() const {
  return MongodbCmdParser::RuleDb_name;
}

void MongodbCmdParser::Db_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDb_name(this);
}

void MongodbCmdParser::Db_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDb_name(this);
}


antlrcpp::Any MongodbCmdParser::Db_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitDb_name(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::Db_nameContext* MongodbCmdParser::db_name() {
  Db_nameContext *_localctx = _tracker.createInstance<Db_nameContext>(_ctx, getState());
  enterRule(_localctx, 6, MongodbCmdParser::RuleDb_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(MongodbCmdParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_nameContext ------------------------------------------------------------------

MongodbCmdParser::Function_nameContext::Function_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::Function_nameContext::IDENTIFIER() {
  return getToken(MongodbCmdParser::IDENTIFIER, 0);
}

tree::TerminalNode* MongodbCmdParser::Function_nameContext::ID_START_WITH_UNDERLINE() {
  return getToken(MongodbCmdParser::ID_START_WITH_UNDERLINE, 0);
}


size_t MongodbCmdParser::Function_nameContext::getRuleIndex() const {
  return MongodbCmdParser::RuleFunction_name;
}

void MongodbCmdParser::Function_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_name(this);
}

void MongodbCmdParser::Function_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_name(this);
}


antlrcpp::Any MongodbCmdParser::Function_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitFunction_name(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::Function_nameContext* MongodbCmdParser::function_name() {
  Function_nameContext *_localctx = _tracker.createInstance<Function_nameContext>(_ctx, getState());
  enterRule(_localctx, 8, MongodbCmdParser::RuleFunction_name);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!(_la == MongodbCmdParser::IDENTIFIER

    || _la == MongodbCmdParser::ID_START_WITH_UNDERLINE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentsContext ------------------------------------------------------------------

MongodbCmdParser::ArgumentsContext::ArgumentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MongodbCmdParser::MlistContext* MongodbCmdParser::ArgumentsContext::mlist() {
  return getRuleContext<MongodbCmdParser::MlistContext>(0);
}


size_t MongodbCmdParser::ArgumentsContext::getRuleIndex() const {
  return MongodbCmdParser::RuleArguments;
}

void MongodbCmdParser::ArgumentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArguments(this);
}

void MongodbCmdParser::ArgumentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArguments(this);
}


antlrcpp::Any MongodbCmdParser::ArgumentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitArguments(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::ArgumentsContext* MongodbCmdParser::arguments() {
  ArgumentsContext *_localctx = _tracker.createInstance<ArgumentsContext>(_ctx, getState());
  enterRule(_localctx, 10, MongodbCmdParser::RuleArguments);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    mlist();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MarrayContext ------------------------------------------------------------------

MongodbCmdParser::MarrayContext::MarrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::MarrayContext::LBRACKET() {
  return getToken(MongodbCmdParser::LBRACKET, 0);
}

std::vector<MongodbCmdParser::MvalueContext *> MongodbCmdParser::MarrayContext::mvalue() {
  return getRuleContexts<MongodbCmdParser::MvalueContext>();
}

MongodbCmdParser::MvalueContext* MongodbCmdParser::MarrayContext::mvalue(size_t i) {
  return getRuleContext<MongodbCmdParser::MvalueContext>(i);
}

tree::TerminalNode* MongodbCmdParser::MarrayContext::RBRACKET() {
  return getToken(MongodbCmdParser::RBRACKET, 0);
}

std::vector<tree::TerminalNode *> MongodbCmdParser::MarrayContext::COMMA() {
  return getTokens(MongodbCmdParser::COMMA);
}

tree::TerminalNode* MongodbCmdParser::MarrayContext::COMMA(size_t i) {
  return getToken(MongodbCmdParser::COMMA, i);
}


size_t MongodbCmdParser::MarrayContext::getRuleIndex() const {
  return MongodbCmdParser::RuleMarray;
}

void MongodbCmdParser::MarrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMarray(this);
}

void MongodbCmdParser::MarrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMarray(this);
}


antlrcpp::Any MongodbCmdParser::MarrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitMarray(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::MarrayContext* MongodbCmdParser::marray() {
  MarrayContext *_localctx = _tracker.createInstance<MarrayContext>(_ctx, getState());
  enterRule(_localctx, 12, MongodbCmdParser::RuleMarray);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(MongodbCmdParser::LBRACKET);
    setState(85);
    mvalue();
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MongodbCmdParser::COMMA) {
      setState(86);
      match(MongodbCmdParser::COMMA);
      setState(87);
      mvalue();
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93);
    match(MongodbCmdParser::RBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MlistContext ------------------------------------------------------------------

MongodbCmdParser::MlistContext::MlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::MlistContext::LBRACE() {
  return getToken(MongodbCmdParser::LBRACE, 0);
}

tree::TerminalNode* MongodbCmdParser::MlistContext::RBRACE() {
  return getToken(MongodbCmdParser::RBRACE, 0);
}

std::vector<MongodbCmdParser::Key_valueContext *> MongodbCmdParser::MlistContext::key_value() {
  return getRuleContexts<MongodbCmdParser::Key_valueContext>();
}

MongodbCmdParser::Key_valueContext* MongodbCmdParser::MlistContext::key_value(size_t i) {
  return getRuleContext<MongodbCmdParser::Key_valueContext>(i);
}

std::vector<tree::TerminalNode *> MongodbCmdParser::MlistContext::COMMA() {
  return getTokens(MongodbCmdParser::COMMA);
}

tree::TerminalNode* MongodbCmdParser::MlistContext::COMMA(size_t i) {
  return getToken(MongodbCmdParser::COMMA, i);
}


size_t MongodbCmdParser::MlistContext::getRuleIndex() const {
  return MongodbCmdParser::RuleMlist;
}

void MongodbCmdParser::MlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMlist(this);
}

void MongodbCmdParser::MlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMlist(this);
}


antlrcpp::Any MongodbCmdParser::MlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitMlist(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::MlistContext* MongodbCmdParser::mlist() {
  MlistContext *_localctx = _tracker.createInstance<MlistContext>(_ctx, getState());
  enterRule(_localctx, 14, MongodbCmdParser::RuleMlist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(MongodbCmdParser::LBRACE);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MongodbCmdParser::MONGO_OPERATORS)
      | (1ULL << MongodbCmdParser::IDENTIFIER)
      | (1ULL << MongodbCmdParser::ID_START_WITH_UNDERLINE)
      | (1ULL << MongodbCmdParser::M_STRINGS))) != 0)) {
      setState(96);
      key_value();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MongodbCmdParser::COMMA) {
        setState(97);
        match(MongodbCmdParser::COMMA);
        setState(98);
        key_value();
        setState(103);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(106);
    match(MongodbCmdParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Key_valueContext ------------------------------------------------------------------

MongodbCmdParser::Key_valueContext::Key_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MongodbCmdParser::MkeyContext* MongodbCmdParser::Key_valueContext::mkey() {
  return getRuleContext<MongodbCmdParser::MkeyContext>(0);
}

tree::TerminalNode* MongodbCmdParser::Key_valueContext::COLON() {
  return getToken(MongodbCmdParser::COLON, 0);
}

MongodbCmdParser::MvalueContext* MongodbCmdParser::Key_valueContext::mvalue() {
  return getRuleContext<MongodbCmdParser::MvalueContext>(0);
}


size_t MongodbCmdParser::Key_valueContext::getRuleIndex() const {
  return MongodbCmdParser::RuleKey_value;
}

void MongodbCmdParser::Key_valueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKey_value(this);
}

void MongodbCmdParser::Key_valueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKey_value(this);
}


antlrcpp::Any MongodbCmdParser::Key_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitKey_value(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::Key_valueContext* MongodbCmdParser::key_value() {
  Key_valueContext *_localctx = _tracker.createInstance<Key_valueContext>(_ctx, getState());
  enterRule(_localctx, 16, MongodbCmdParser::RuleKey_value);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    mkey();
    setState(109);
    match(MongodbCmdParser::COLON);
    setState(110);
    mvalue();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MkeyContext ------------------------------------------------------------------

MongodbCmdParser::MkeyContext::MkeyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MongodbCmdParser::MkeyContext::IDENTIFIER() {
  return getToken(MongodbCmdParser::IDENTIFIER, 0);
}

tree::TerminalNode* MongodbCmdParser::MkeyContext::ID_START_WITH_UNDERLINE() {
  return getToken(MongodbCmdParser::ID_START_WITH_UNDERLINE, 0);
}

tree::TerminalNode* MongodbCmdParser::MkeyContext::M_STRINGS() {
  return getToken(MongodbCmdParser::M_STRINGS, 0);
}

tree::TerminalNode* MongodbCmdParser::MkeyContext::MONGO_OPERATORS() {
  return getToken(MongodbCmdParser::MONGO_OPERATORS, 0);
}


size_t MongodbCmdParser::MkeyContext::getRuleIndex() const {
  return MongodbCmdParser::RuleMkey;
}

void MongodbCmdParser::MkeyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMkey(this);
}

void MongodbCmdParser::MkeyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MongodbCmdParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMkey(this);
}


antlrcpp::Any MongodbCmdParser::MkeyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MongodbCmdParserVisitor*>(visitor))
    return parserVisitor->visitMkey(this);
  else
    return visitor->visitChildren(this);
}

MongodbCmdParser::MkeyContext* MongodbCmdParser::mkey() {
  MkeyContext *_localctx = _tracker.createInstance<MkeyContext>(_ctx, getState());
  enterRule(_localctx, 18, MongodbCmdParser::RuleMkey);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MongodbCmdParser::MONGO_OPERATORS)
      | (1ULL << MongodbCmdParser::IDENTIFIER)
      | (1ULL << MongodbCmdParser::ID_START_WITH_UNDERLINE)
      | (1ULL << MongodbCmdParser::M_STRINGS))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MvalueContext ------------------------------------------------------------------

MongodbCmdParser::MvalueContext::MvalueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MongodbCmdParser::Scientific_numContext* MongodbCmdParser::MvalueContext::scientific_num() {
  return getRuleContext<MongodbCmdParser::Scientific_numContext>(0);
}

tree::TerminalNode* MongodbCmdParser::MvalueContext::M_STRINGS() {
  return getToken(MongodbCmdParser::M_STRINGS, 0);
}

tree::TerminalNode* MongodbCmdParser::MvalueContext::UNSIGNED_INTEGER() {
  return getToken(MongodbCmdParser::UNSIGNED_INTEGER, 0);
}

MongodbCmdParser::MarrayContext* MongodbCmdParser::MvalueContext::marray() {
  return getRuleContext<MongodbCmdParser::MarrayContext>(0);
}

MongodbCmdParser::MlistContext* MongodbCmdParser::MvalueContext::mlist() {
  return getRuleContext<MongodbCmdParser::MlistContext>(0);
}

tree::TerminalNode* MongodbCmdParser::MvalueContext::REGEX_STRINGS() {
  return getToken(MongodbCmdParser::REGEX_STRINGS, 0);
}

tree::TerminalNode* MongodbCmdParser::MvalueContext::M_TRUE() {
  return getToken(MongodbCmdParser::M_TRUE, 0);
}

tree::TerminalNode* MongodbCmdParser::MvalueContext::M_FALSE() {
  return getToken(MongodbCmdParser::M_FALSE, 0);
}

MongodbCmdParser::Function_callContext* MongodbCmdParser::MvalueContext::function_call() {
  return getRuleContext<MongodbCmdParser::Function_callContext>(0);
}

MongodbCmdParser::Js_stmtsContext* MongodbCmdParser::MvalueContext::js_stmts() {
  return getRuleContext<MongodbCmdParser::Js_stmtsContext>(0);
}

MongodbCmdParser::General_expressionContext* MongodbCmdParser::MvalueContext::general_expression() {
  return getRuleContext<MongodbCmdParser::General_expressionContext>(0);
}


size_t MongodbCmdParser::MvalueContext::getRuleIndex() const {
  return MongodbCmdParser::RuleMvalue;
}
